Fixed extra space making page wider than needed to be, also fixed the finances page to allow for a decent mobile friendly layout. (Had to create a new finances page and restructure the yearly overview table

--- a/css/style.css
+++ b/css/style.css
@@ -134,6 +134,11 @@ ul {
   position: -webkit-sticky; /* Safari */
   position: sticky;
   top: 0;
+
+}
+
+.navbar-brand {
+  margin-right: 0;
 }
 
 li {
